ITS WEB THREE DOT OH

--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Where Is Amiel?</title>
-  <link rel="stylesheet" href="/screen.css">
+  <script type="text/javascript" src="/screen.js" charset="utf-8"></script>
 </head>
 <body>
   <h3>Where is Amiel?</h3>
